# regression-analysis-for-public-policy-with-time-series

./: README.md  article.md  config.yaml  main.py  pyproject.toml  us_all_sectors_generation_monthly.csv
